--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/test-utils": "^2.4.1",
-    "cypress": "^12.17.2",
+    "autoprefixer": "^10.4.14",
+    "cypress": "^4.2.0",
+    "daisyui": "^3.5.1",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.27",
     "start-server-and-test": "^2.0.0",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.6",
     "vitest": "^0.33.0"
   }
